cabal-version:      3.0

author:             Joshua Obritsch
bug-reports:        https://github.com/joshua-obritsch/blizzard-css/issues
build-type:         Simple
category:           Text
copyright:          2022 Joshua Obritsch
description:        A type-safe CSS generator for blizzard-html.
extra-source-files: CHANGELOG.md
homepage:           https://github.com/joshua-obritsch/blizzard-css
license:            MIT
license-file:       LICENSE
maintainer:         Joshua Obritsch <joshua@obritsch.com>
name:               blizzard-css
stability:          Experimental
synopsis:           A type-safe CSS generator for blizzard-html
version:            0.1.0.0


library
    build-depends:      base >= 4    && <= 4.19
                      , text >= 0.10 && <= 2.1
    default-language:   Haskell2010
    exposed-modules:    Css
    hs-source-dirs:     src
