cabal-version:      3.0

author:             Joshua Obritsch
bug-reports:        https://github.com/joshua-obritsch/blizzard-css/issues
build-type:         Simple
category:           Text
copyright:          2022 Joshua Obritsch
description:        A CSS generator for blizzard-html.
extra-source-files: CHANGELOG.md
homepage:           https://github.com/joshua-obritsch/blizzard-css
license:            MIT
license-file:       LICENSE
maintainer:         Joshua Obritsch <joshua@obritsch.com>
name:               blizzard-css
stability:          Experimental
synopsis:           A CSS generator for blizzard-html
version:            0.1.0.0


library
    build-depends:      base          >= 4    && <= 5
                      , blizzard-html >= 0.5  && <= 0.6
                      , containers    >= 0.1  && <= 0.7
                      , text          >= 0.10 && <= 3
    default-language:   Haskell2010
    exposed-modules:    Css
                      , Css.Attributes
                      , Css.Colors
                      , Css.Functions
                      , Css.Intl
                      , Css.Properties
                      , Css.Units
                      , Css.Values
    other-modules:      Css.Internal
    hs-source-dirs:     src
